ssi for dynamic shit

--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
-
 <style>
-.align{text-align: center;}
+.align{text-align:center;}
+body{background:#222;color:#fff;}
+a{color:009ac7;}
 </style>
 <div class="align">
-<a href="illuminati.mp4"><h1>Illuminati</h1></a><br/>
-<a href="diibugger.mp4"><h1>Diibugger</h1></a><br/>
-<a href="payload/exploit.html"><h1>Exploit</h1></a><br/>
+<h2>I will pwn your Wii U on system version 5.5.2</h2>
+<a href="payload/exploit.html"><h1>Exploit</h1></a>
+<h2>
+<a href="payload/exploit.html?delta=0">0</a>
+<a href="payload/exploit.html?delta=1">1</a>
+<a href="payload/exploit.html?delta=2">2</a>
+<a href="payload/exploit.html?delta=3">3</a>
+<a href="payload/exploit.html?delta=4">4</a>
+</h2>
+Please make sure you have Homebrew Launcher 1.3 on your SD card. 1.4 should work too, but 1.3 should have much better consistency. <a href="https://github.com/dimok789/homebrew_launcher/releases/tag/v1.3">You can download HBL 1.3 here</a>.<br/>
+Try Exploit 2 (or the big Exploit button) first, if it doesn't work, try again, if it still doesn't work, try again, if it still doesn't work, try a different number, if it still doesn't work, try again, if it still doesn't work, clear browser save data and try again, if it still doesn't work, try again. <b><i>Just keep trying</i></b>, this has a pretty low chance of working, but it does work sometimes.<br/>
 <br/>
 <br/>
 <br/>
 <br/>
-<a href="tcpgecko.mp4"><h1>TCPGecko</h1></a><br/>
+This service provided by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a>. <a href="https://github.com/coltondrg/u.drg.li">Source for this site</a>.<br/>
+All the real work was done by the <a href="https://gbatemp.net/threads/webhack-on-5-5-2.480938/">the smart people on this thread's OP</a><br/>
+git commit <!--#include file="commit.html" -->
 </div>
