--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ body{background:#222;color:#fff;}
 a{color:009ac7;}
 </style>
 <div class="align">
-<h2>stUpidhax: Wii U 5.5.2 browser pwn</h2>
+<h2>stUpiidhax: Wii U 5.5.2 browser pwn</h2>
 <a href="payload/exploit.html"><h1>Exploit</h1></a>
 <h2>
 <a href="payload/exploit.html?delta=0">0</a>
