--- a/13/index.html
+++ b/13/index.html
@@ -4,7 +4,7 @@ body{background:#222;color:#fff;}
 a{color:009ac7;}
 </style>
 <div class="align">
-<h2>stUpiidhax: Wii U 5.5.2 browser pwn</h2>
+<h2>stUpiidhax: Wii U 5.5.2 browser pwn (thirteen version)</h2>
 <a href="payload/exploit.html"><h1>Exploit</h1></a>
 <h2>
 <a href="payload/exploit.html?delta=0">0</a>
@@ -16,7 +16,7 @@ a{color:009ac7;}
 Open your curtains. Just do it. Don't ask me why.<br/>
 Please make sure you have Homebrew Launcher 1.3 on your SD card. 1.4 should work too, but 1.3 should have much better consistency. <a href="https://github.com/dimok789/homebrew_launcher/releases/tag/v1.3">You can download HBL 1.3 here</a>.<br/>
 Try Exploit 2 (or the big Exploit button) first, if it doesn't work, try again, if it still doesn't work, try again, if it still doesn't work, try a different number, if it still doesn't work, try again, if it still doesn't work, clear browser save data and try again, if it still doesn't work, try again. <b><i>Just keep trying</i></b>, this has a pretty low chance of working, but it does work sometimes.<br/>
-<a href="/13/">Thirteen version</a><br/>
+<a href="/">Back to the original version</a><br/>
 <br/>
 <br/>
 <br/>
