--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@ a{color:009ac7;}
 <a href="payload/exploit.html?delta=3">3</a>
 <a href="payload/exploit.html?delta=4">4</a>
 </h2>
-Remember to purchase and download Brain Age or some other Haxchi compatible VC to the internal storage before attempting to run the exploit if you are planning on installing Haxchi. Given this exploit's inconsistency, the last thing you want to do is succeed after 100 tries only to find out that you forgot to download the virtual console.
+Remember to purchase and download Brain Age or some other Haxchi compatible VC to the internal storage before attempting to run the exploit if you are planning on installing Haxchi. Given this exploit's inconsistency, the last thing you want to do is succeed after 100 tries only to find out that you forgot to download the virtual console.<br/>
 Open your curtains. Just do it. Don't ask me why.<br/>
 Please make sure you have Homebrew Launcher 1.3 on your SD card. 1.4 should work too, but 1.3 should have much better consistency. <a href="https://github.com/dimok789/homebrew_launcher/releases/tag/v1.3">You can download HBL 1.3 here</a>.<br/>
 Try Exploit 2 (or the big Exploit button) first, if it doesn't work, try again, if it still doesn't work, try again, if it still doesn't work, try a different number, if it still doesn't work, try again, if it still doesn't work, clear browser save data and try again, if it still doesn't work, try again. <b><i>Just keep trying</i></b>, this has a pretty low chance of working, but it does work sometimes.<br/>
+<a href="https://youtu.be/L8TibbgVSpo">How does this exploit work?</a> /s
 <br/>
 <br/>
 <br/>
