--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ a{color:009ac7;}
 <h2>stUpiidhax: Wii U 5.5.2 browser pwn</h2>
 <a href="payload/exploit.html"><h1>Exploit</h1></a>
 <h2>
-<a href="payload/exploit.html?delta=0">0</a>
-<a href="payload/exploit.html?delta=1">1</a>
-<a href="payload/exploit.html?delta=2">2</a>
-<a href="payload/exploit.html?delta=3">3</a>
-<a href="payload/exploit.html?delta=4">4</a>
+<a href="payload/delta0.html">0</a>
+<a href="payload/delta1.html?delta=1">1</a>
+<a href="payload/delta2.html?delta=2">2</a>
+<a href="payload/delta3.html?delta=3">3</a>
+<a href="payload/delta4.html?delta=4">4</a>
 </h2>
 Remember to purchase and download Brain Age or some other Haxchi compatible VC to the internal storage before attempting to run the exploit if you are planning on installing Haxchi. Given this exploit's inconsistency, the last thing you want to do is succeed after 100 tries only to find out that you forgot to download the virtual console.<br/>
 Open your curtains. Just do it. Don't ask me why.<br/>
@@ -24,5 +24,5 @@ Try Exploit 2 (or the big Exploit button) first, if it doesn't work, try again, 
 <br/>
 This service provided by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a>. <a href="https://github.com/coltondrg/u.drg.li">Source for this site</a>.<br/>
 All the real work was done by the <a href="https://gbatemp.net/threads/webhack-on-5-5-2.480938/">the smart people on this thread's OP</a><br/>
-git commit <!--#include file="commit.html" -->
+git branch gh-pages
 </div>
