--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ body{background:#222;color:#fff;}
 a{color:009ac7;}
 </style>
 <div class="align">
-<h2>stUpiidhax: Wii U 5.5.2 browser pwn</h2>
+<h2>stUpiidhax: Wii U 5.5.2 browser pwn (cg version)</h2>
 <a href="payload/exploit.html"><h1>Exploit</h1></a>
 <h2>
 <a href="payload/delta0.html">0</a>
@@ -22,7 +22,8 @@ Try Exploit 2 (or the big Exploit button) first, if it doesn't work, try again, 
 <br/>
 <br/>
 <br/>
-This service provided by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a>. <a href="https://github.com/coltondrg/u.drg.li">Source for this site</a>.<br/>
+This service provided by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a> | <a href="https://github.com/coltondrg/stupiidhax">Source for this site</a><br/>
+Unfathomable stupidity: cg method discovered accidentally by <a href="https://twitter.com/CreaTion_DG">Creation_</a> and researched by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a>
 All the real work was done by the <a href="https://gbatemp.net/threads/webhack-on-5-5-2.480938/">the smart people on this thread's OP</a><br/>
 git branch gh-pages
 </div>
