--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>stUpiidhax</title>
+<title>stUpiidhax cg</title>
 <style>
 .align{text-align:center;}
 body{background:#222;color:#fff;}
@@ -14,7 +14,7 @@ a{color:009ac7;}
 <a href="payload/delta3.html?delta=3">3</a>
 <a href="payload/delta4.html?delta=4">4</a>
 </h2>
-If you're getting really demoralized and want another gateway to try, <a href="http://cg.stupiid.ovh/">give the cg version a shot</a> at cg.stupiid.ovh
+<a href="http://stupiid.ovh/">Back to the main gateway</a>
 Remember to purchase and download your Haxchi compatible VC to the internal storage before doing the exploit if you want to install Haxchi. It would suck if it finally worked but you couldn't install Haxchi.<br/>
 Try the big exploit button a few times first. Clearing your browser save data or choosing another delta might also help. The important thing is to <b><i>just keep trying</i></b>!
 <br/>
