--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Try the big exploit button a few times first. Clearing your browser save data or
 <br/>
 <br/>
 This service provided by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a> | <a href="https://github.com/coltondrg/stupiidhax">Source for this site</a><br/>
-Unfathomable stupidity: cg method discovered accidentally by <a href="https://twitter.com/CreaTion_DG">Creation_</a> and researched by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a>
+Unfathomable stupidity: cg method discovered accidentally by <a href="https://twitter.com/CreaTion_DG">Creation_</a> and researched by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a><br/>
 All the real work was done by the <a href="https://gbatemp.net/threads/webhack-on-5-5-2.480938/">the smart people on this thread's OP</a><br/>
 git branch gh-pages
 </div>
