link to experimental

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ a{color:009ac7;}
 <a href="payload/exploit.html?delta=3">3</a>
 <a href="payload/exploit.html?delta=4">4</a>
 </h2>
+<a href="/fast/">Go here if you want to try a new faster version</a><br/>
+<br/>
 If you're getting really demoralized and want another gateway to try, <a href="http://cg.stupiid.ovh/">give the cg version a shot</a> at cg.stupiid.ovh<br/>
 If you're in Europe and it's not working, try <a href="http://eur.stupiid.ovh/">this European gateway</a> at eur.stupiid.ovh<br/>
 Remember to purchase and download your Haxchi compatible VC to the internal storage before doing the exploit if you want to install Haxchi. It would suck if it finally worked but you couldn't install Haxchi.<br/>
