--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<title>stUpiidhax</title>
+<title>stUpiidhax fast</title>
 <style>
 .align{text-align:center;}
 body{background:#222;color:#fff;}
 a{color:009ac7;}
 </style>
 <div class="align">
-<h2>stUpiidhax: Wii U 5.5.2 browser pwn</h2>
+<h2>stUpiidhax: Wii U 5.5.2 browser pwn (fast version)</h2>
 <a href="payload/exploit.html"><h1>Exploit</h1></a>
 <h2>
 <a href="payload/exploit.html?delta=0">0</a>
