--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ Try the big exploit button a few times first. Clearing your browser save data or
 <br/>
 <br/>
 This service provided by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a> | <a href="https://github.com/coltondrg/stupiidhax">Source for this site</a><br/>
-This uses the <a href="https://github.com/JumpCallPop/JSTypeHax">JSTypeHax exploit by JumpCallPop</a>
+This uses the <a href="https://github.com/JumpCallPop/JSTypeHax">JSTypeHax exploit by JumpCallPop</a><br/>
 git commit <!--#include file="commit.html" -->
 </div>
