oops (line break) cherry-pick
 Conflicts:
	index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ Try the big exploit button a few times first. Clearing your browser save data or
 <br/>
 This service provided by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a> | <a href="https://github.com/coltondrg/stupiidhax">Source for this site</a><br/>
 Unfathomable stupidity: cg method discovered accidentally by <a href="https://twitter.com/CreaTion_DG">Creation_</a> and researched by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a><br/>
-This uses the <a href="https://github.com/JumpCallPop/JSTypeHax">JSTypeHax exploit by JumpCallPop</a>
+This uses the <a href="https://github.com/JumpCallPop/JSTypeHax">JSTypeHax exploit by JumpCallPop</a><br/>
 git branch gh-pages
 </div>
