new index and readme

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>stUpiidhax</title>
+<title>stUpiidhax stable</title>
 <style>
 .align{text-align:center;}
 body{background:#222;color:#fff;}
@@ -14,9 +14,7 @@ a{color:009ac7;}
 <a href="payload/exploit.html?delta=3">3</a>
 <a href="payload/exploit.html?delta=4">4</a>
 </h2>
-<a href="/fast/">Go here if you want to try a new faster version</a><br/>
 <br/>
-If you're getting really demoralized and want another gateway to try, <a href="http://cg.stupiid.ovh/">give the cg version a shot</a> at cg.stupiid.ovh<br/>
 If you're in Europe and it's not working, try <a href="http://eur.stupiid.ovh/">this European gateway</a> at eur.stupiid.ovh<br/>
 Remember to purchase and download your Haxchi compatible VC to the internal storage before doing the exploit if you want to install Haxchi. It would suck if it finally worked but you couldn't install Haxchi.<br/>
 Try the big exploit button a few times first. Clearing your browser save data or choosing another delta might also help. The important thing is to <b><i>just keep trying</i></b>!
@@ -24,7 +22,7 @@ Try the big exploit button a few times first. Clearing your browser save data or
 <br/>
 <br/>
 <br/>
-This service provided by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a> | <a href="https://github.com/coltondrg/stupiidhax">Source for this site</a><br/>
-This uses the <a href="https://github.com/JumpCallPop/JSTypeHax">JSTypeHax exploit by JumpCallPop</a><br/>
+Service provided by <a href="https://twitter.com/ColtonDRG">ColtonDRG</a> | <a href="https://git.drg.li/ColtonDRG/stUpiidhax">Source for this site</a><br/>
+This uses the JSTypeHax exploit by JumpCallPop<br/>
 git commit <!--#include file="commit.html" -->
 </div>
